# rustDiscordBot

./: .env.example  .gitignore  Cargo.toml  LevelsRewritePlan.md  README.md  RUST_REWRITE_PLAN.md  leveling_data.json  logging.db  migrate_levels.py  server_stats.json
config/: server_stats.json
scripts/: verify_leveling.py  verify_prestige.py
src/: main.rs
src/core/: core_layer.rs  mod.rs
src/core/ai/: ai_service.rs  context.rs  formatting.rs  knowledge.rs  mod.rs  models.rs  system_prompt.txt
src/core/economy/: economy_service.rs  inventory_service.rs  item_definitions.rs  mod.rs
src/core/github/: github_service.rs
src/core/leveling/: achievements.rs  leveling_service.rs
src/core/logging/: logging_models.rs  logging_service.rs  mod.rs
src/core/moderation/: mod.rs  moderation_models.rs  moderation_service.rs
src/core/server_stats/: mod.rs  server_stats_models.rs  server_stats_service.rs  server_stats_store.rs
src/core/timezones/: timezone_service.rs
src/discord/: discord_layer.rs  mod.rs
src/discord/ai/: context_channels.rs  mod.rs
src/discord/commands/: command_catalog.rs  economy.rs  github.rs  help.rs  info.rs  leveling.rs  mod.rs  presence.rs  remind.rs  server_stats.rs  shop.rs  timezones.rs
src/discord/github/: dispatcher.rs  mod.rs
src/discord/leveling/: leveling_announcements.rs
src/discord/logging/: commands.rs  events.rs  formatter.rs  mod.rs
src/discord/moderation/: commands.rs  mod.rs  spam_handler.rs
src/infra/: infra_layer.rs  mod.rs
src/infra/ai/: gemini_client.rs  knowledge_store.rs  mod.rs  openrouter_client.rs
(+18 files in other folders)
