[package]
name = "rust_discord_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Discord framework - built on serenity
poise = "0.6"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Concurrent data structures (for in-memory storage)
dashmap = "6"

# Randomness for XP rolls
rand = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

# Async trait support
async-trait = "0.1"

# Environment variables
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
